--- a/look1.css
+++ b/look1.css
@@ -16,7 +16,7 @@ article {
     border-left: 1px solid gray;
     padding: 1em;
     overflow: hidden;
-	background-image: url("https://i.ytimg.com/vi/AdrIYdrFErg/mqdefault.jpg")
+	background-image: a href:("IMG_20170519_144823.jpg")
 }
 
 body {background-image: url("https://i2.wp.com/pbs.twimg.com/profile_images/644222149092331520/SdBxbA4X_200x200.jpg")
