--- a/look1.css
+++ b/look1.css
@@ -19,7 +19,7 @@ article {
 	background-image: a href:("IMG_20170519_144823.jpg")
 }
 
-body {background-image: url("https://i2.wp.com/pbs.twimg.com/profile_images/644222149092331520/SdBxbA4X_200x200.jpg")
+body {background-image: a href:("tenor.gif")
 
 }
 
