--- a/look1.css
+++ b/look1.css
@@ -16,10 +16,10 @@ article {
     border-left: 1px solid gray;
     padding: 1em;
     overflow: hidden;
-	background-image: a href:("IMG_20170519_144823.jpg")
+	background-image: url("whyte-c.gif")
 }
 
-body {background-image: a href:("tenor.gif")
+body {background-image: url("tenor.gif")
 
 }
 
